--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"cartalyst/sentry": "2.0.*",
+        "dflydev/markdown": "1.0.*",
+		"imagine/imagine": "v0.4.1"
 	},
 	"autoload": {
 		"classmap": [
@@ -32,5 +35,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev"
 }
