--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.1.*",
 		"cartalyst/sentry": "2.0.*",
         "dflydev/markdown": "1.0.*",
-		"imagine/imagine": "v0.4.1"
+		"imagine/imagine": "v0.4.1",
+		"edvinaskrucas/notification": "1.*"
 	},
 	"autoload": {
 		"classmap": [
